# FastDescriptor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
TestFile/: TestDebugExporter.cpp  TestSimpleView.cpp
UnitTest/: GTest.cpp  GTest.h  test.cpp  test.h
include/: DebugExporter.h  Estimator.h  FlannSearch.h  SimpleView.h  Type.h  estimator.h  main.h
src/: ColorFeature.cpp  ColorFeature.h  ComputeFeatures.cpp  ComputeFeatures.h  ResultVisual.cpp  TrimmedICP.cpp  TrimmedICP.h  estTest.cpp  harris3d.cpp  lineTest.cpp  viewResult.cpp
